fix:position on mobile version has changed

--- a/cssMemSlider/styles.css
+++ b/cssMemSlider/styles.css
@@ -233,7 +233,7 @@ body{
         height: 14vh;
     }
 
-    .text{
+    .content_text{
         width: 100%;
         margin-bottom: 10px;
         order:2;
